; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/chelsio/extr_vsc7326.c_mac_update_statistics.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/chelsio/extr_vsc7326.c_mac_update_statistics.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmac_statistics = type { i32, i32, i32 }
%struct.cmac = type { %struct.cmac_statistics, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i32 }

@MAC_STATS_UPDATE_FULL = common dso_local global i32 0, align 4
@MAJOR_UPDATE_TICKS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.cmac_statistics* (%struct.cmac*, i32)* @mac_update_statistics to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.cmac_statistics* @mac_update_statistics(%struct.cmac* %0, i32 %1) #0 {
  %3 = alloca %struct.cmac*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.cmac* %0, %struct.cmac** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @MAC_STATS_UPDATE_FULL, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %17, label %9

9:                                                ; preds = %2
  %10 = load %struct.cmac*, %struct.cmac** %3, align 8
  %11 = getelementptr inbounds %struct.cmac, %struct.cmac* %10, i32 0, i32 1
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @MAJOR_UPDATE_TICKS, align 8
  %16 = icmp sge i64 %14, %15
  br i1 %16, label %17, label %24

17:                                               ; preds = %9, %2
  %18 = load %struct.cmac*, %struct.cmac** %3, align 8
  %19 = call i32 @port_stats_update(%struct.cmac* %18)
  %20 = load %struct.cmac*, %struct.cmac** %3, align 8
  %21 = getelementptr inbounds %struct.cmac, %struct.cmac* %20, i32 0, i32 1
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  store i64 0, i64* %23, align 8
  br label %57

24:                                               ; preds = %9
  %25 = load %struct.cmac*, %struct.cmac** %3, align 8
  %26 = getelementptr inbounds %struct.cmac, %struct.cmac* %25, i32 0, i32 1
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  store i32 %29, i32* %5, align 4
  %30 = load %struct.cmac*, %struct.cmac** %3, align 8
  %31 = load i32, i32* %5, align 4
  %32 = call i32 @REG_RX_OK_BYTES(i32 %31)
  %33 = load %struct.cmac*, %struct.cmac** %3, align 8
  %34 = getelementptr inbounds %struct.cmac, %struct.cmac* %33, i32 0, i32 0
  %35 = getelementptr inbounds %struct.cmac_statistics, %struct.cmac_statistics* %34, i32 0, i32 2
  %36 = call i32 @rmon_update(%struct.cmac* %30, i32 %32, i32* %35)
  %37 = load %struct.cmac*, %struct.cmac** %3, align 8
  %38 = load i32, i32* %5, align 4
  %39 = call i32 @REG_RX_BAD_BYTES(i32 %38)
  %40 = load %struct.cmac*, %struct.cmac** %3, align 8
  %41 = getelementptr inbounds %struct.cmac, %struct.cmac* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.cmac_statistics, %struct.cmac_statistics* %41, i32 0, i32 1
  %43 = call i32 @rmon_update(%struct.cmac* %37, i32 %39, i32* %42)
  %44 = load %struct.cmac*, %struct.cmac** %3, align 8
  %45 = load i32, i32* %5, align 4
  %46 = call i32 @REG_TX_OK_BYTES(i32 %45)
  %47 = load %struct.cmac*, %struct.cmac** %3, align 8
  %48 = getelementptr inbounds %struct.cmac, %struct.cmac* %47, i32 0, i32 0
  %49 = getelementptr inbounds %struct.cmac_statistics, %struct.cmac_statistics* %48, i32 0, i32 0
  %50 = call i32 @rmon_update(%struct.cmac* %44, i32 %46, i32* %49)
  %51 = load %struct.cmac*, %struct.cmac** %3, align 8
  %52 = getelementptr inbounds %struct.cmac, %struct.cmac* %51, i32 0, i32 1
  %53 = load %struct.TYPE_2__*, %struct.TYPE_2__** %52, align 8
  %54 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %53, i32 0, i32 0
  %55 = load i64, i64* %54, align 8
  %56 = add nsw i64 %55, 1
  store i64 %56, i64* %54, align 8
  br label %57

57:                                               ; preds = %24, %17
  %58 = load %struct.cmac*, %struct.cmac** %3, align 8
  %59 = getelementptr inbounds %struct.cmac, %struct.cmac* %58, i32 0, i32 0
  ret %struct.cmac_statistics* %59
}

declare dso_local i32 @port_stats_update(%struct.cmac*) #1

declare dso_local i32 @rmon_update(%struct.cmac*, i32, i32*) #1

declare dso_local i32 @REG_RX_OK_BYTES(i32) #1

declare dso_local i32 @REG_RX_BAD_BYTES(i32) #1

declare dso_local i32 @REG_TX_OK_BYTES(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
